04_Teste/exercicios_gerados/question_mcg_11_classe/version_3/full_program_output.txt
Traceback (most recent call last):
  File "<string>", line 1
    Class Livro:
          ^
SyntaxError: invalid syntax